Amended config and index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,13 +7,12 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
-
     <h1 class="govuk-heading-xl">
-      {{ serviceName }}
+      Explore your options after school or college
     </h1>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+    <p><a href="02/index">View prototype</a></p>
+
   </div>
 </div>
 
