--- a/app/views/02/index.html
+++ b/app/views/02/index.html
@@ -28,7 +28,7 @@
   <div class="dfe-card">
       <div class="dfe-card-container">
         <h3 class="govuk-heading-m">
-            <a href="#" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">Browse courses</a>
+            <a href="browse-courses-location" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">Browse courses</a>
         </h3>
         <p>If you're not sure yet what to do, you can browse all courses and apprenticeships near you.</p>
       </div>
