--- a/app/views/06/level-adult.html
+++ b/app/views/06/level-adult.html
@@ -57,6 +57,7 @@
     </fieldset>
   </div>
   
+  <p><a href="">What qualification levels mean</a></p>
 
     
     <div class="govuk-button-group">
@@ -65,7 +66,6 @@
         text: "Continue"
       }) }}
 
-      <a class="govuk-link" href="check-answers">Skip this step</a>
       </div>
 
   </div>
