--- a/app/views/06/what.html
+++ b/app/views/06/what.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="job-subject-all" method="post" novalidate>
+<form action="subjects" method="post" novalidate>
 
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="study-location-hint">
@@ -39,7 +39,6 @@
       text: "Continue"
     }) }}
 
-    <a class="govuk-link" href="search-results">Skip this step</a>
     </div>
    
   </form>
