--- a/app/views/06/jobs.html
+++ b/app/views/06/jobs.html
@@ -10,7 +10,7 @@
   <div data-module="moj-add-another">
     <form action="learning-method" method="post" novalidate>
 
-      <h1 class="govuk-heading-l">What jobs or careers do you have in mind?</h1>
+      <h1 class="govuk-heading-l">Are there any jobs or careers you're interested in working in?</h1>
 
       <p>This is optional but the more you tell us the better your search results will be.</p>
 
@@ -26,7 +26,7 @@
       <fieldset class="govuk-fieldset moj-add-another__item">
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="job[0][first_name]">
-            Enter a job or career
+            Enter a job or career (optional)
           </label>
           
           <div id="event-name-hint" class="govuk-hint">
