--- a/app/views/06/level-of-education.html
+++ b/app/views/06/level-of-education.html
@@ -11,7 +11,7 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h2 class="govuk-fieldset__heading">
-            What level courses and apprenticeships are you looking for?
+            What level courses or apprenticeships are you looking for?
           </h2>
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
@@ -27,17 +27,11 @@
               A level, T level or equivalent
             </label>
           </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="level-of-education-3" name="level-of-education" type="radio" value="GCSE, A level, T level or equivalent">
-            <label class="govuk-label govuk-radios__label" for="level-of-education-3">
-              Both
-            </label>
-          </div>
           <div class="govuk-radios__divider">or</div>
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="level-of-education-4" name="level-of-education" type="radio" value="I don't know">
             <label class="govuk-label govuk-radios__label" for="level-of-education-4">
-              I don't know
+              Show me both
             </label>
           </div>
         </div>
@@ -51,7 +45,6 @@
         text: "Continue"
       }) }}
 
-      <a class="govuk-link" href="check-answers">Skip this step</a>
       </div>
 
   </div>
