--- a/app/views/06/location-adults.html
+++ b/app/views/06/location-adults.html
@@ -9,10 +9,12 @@
 <form action="search-results" method="post" novalidate>
 
   <h1 class="govuk-heading-l">
-    Where do you live and want to study?
+    Where do you want to study
   </h1>
 
   <p>We need to know where you live as some courses or training are only available in certain areas, even if you can complete it online. </p>
+
+  <p>If you enter a location that is different to where you live, you should check whether you need to live in the area (often referred to as being ‘a resident’) to do the course.  </p>
 
   {{ govukInput({
     label: {
@@ -28,7 +30,7 @@
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
-          How far would you be happy to travel?
+          How far are you able to travel? 
         </h1>
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
@@ -78,7 +80,6 @@
       text: "Continue"
     }) }}
 
-    <a class="govuk-link" href="what">Skip this step</a>
     </div>
 
 
