Updated filters/search results page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -26,6 +26,7 @@
 @import "components/dfe-header";
 @import "components/filters";
 @import "components/option-select";
+@import "components/filters-2";
 
 
 .govuk-width-container { @include govuk-width-container; }
