Added routing for 'current situation'

--- a/app/views/06/current-situation.html
+++ b/app/views/06/current-situation.html
@@ -7,7 +7,7 @@
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
 
-      <form action="age-results" method="post" novalidate>
+      <form action="next-steps" method="post" novalidate>
       <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l">
