--- a/app/views/06/index.html
+++ b/app/views/06/index.html
@@ -11,7 +11,7 @@
 
 
         <h2 class="govuk-heading-l">
-          Find education and training
+          Find a course or apprenticeship 
         </h2>
     
         <p>Whether you're already in education or training, or coming back after a break, we can help you work out what to do next.</p>
@@ -19,7 +19,7 @@
     
         {{ govukButton({
           text: "Start now",
-          href: "age"
+          href: "current-situation"
         }) }}
     
       </div>
