--- a/app/views/06/search-results.html
+++ b/app/views/06/search-results.html
@@ -10,13 +10,13 @@
   <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-l">2 results</h1>
-
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
   
   </div>
 
   <div class="govuk-grid-column-one-third">
+
+    <hr class="govuk-section-break govuk-section-break--s govuk-section-break" style="margin-bottom: 30px;">
+
 
     <div class="filter-container">
 
@@ -369,7 +369,7 @@
 
 
 <div class="govuk-grid-column-two-thirds">
-  <div id="active-filters" class="govuk-!-margin-top-4">
+  <div id="active-filters">
     <h2 id="active-filters-heading" class="govuk-heading-m" style="display: none;">You've searched for:</h2>
     <div id="selected-filters" class="remove-filters"></div>
   </div>
