--- a/app/views/06/search-results.html
+++ b/app/views/06/search-results.html
@@ -15,7 +15,7 @@
 
   <div class="govuk-grid-column-one-third">
 
-    <hr class="govuk-section-break govuk-section-break--s govuk-section-break" style="margin-bottom: 30px;">
+    <hr class="govuk-section-break govuk-section-break--s govuk-section-break">
 
 
     <div class="filter-container">
