--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -63,6 +63,12 @@
     border: 1px solid govuk-colour('black');
 }
 
+.remove-filters a:focus {
+    border-color: #ffdd00;
+    outline: 3px solid transparent;
+    box-shadow: inset 0 0 0 1px #ffdd00;
+}
+
 .remove-filters a:after {
     content: "";
     display: inline-block;
