--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -59,14 +59,13 @@
 }
 
 .remove-filters a:hover {
-    text-decoration: underline;
-    border: 1px solid govuk-colour('black');
+    outline: 1px #0b0c0c solid;
+    outline-offset: 0;
+    border-color: #0b0c0c;
 }
 
 .remove-filters a:focus {
-    border-color: #ffdd00;
-    outline: 3px solid transparent;
-    box-shadow: inset 0 0 0 1px #ffdd00;
+    background-color: #fd0;
 }
 
 .remove-filters a:after {
