Added search results routing and updated content

--- a/app/views/06/jobs.html
+++ b/app/views/06/jobs.html
@@ -17,7 +17,7 @@
       <p>You can be as specific as you like. For example:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>bricklaying</li>
-          <li>construction</li>
+          <li>working with animals</li>
           <li>something in the public sector</li>
         </ul>
 
