--- a/app/views/06/what-adults.html
+++ b/app/views/06/what-adults.html
@@ -20,7 +20,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="search-adult" name="search-adult" type="radio" value="By a course name, subject, job or career">
           <label class="govuk-label govuk-radios__label" for="search-adult">
-            By a course name, subject, job or career
+            By a course, subject, job or career
           </label>
         </div>
         <div class="govuk-radios__item">
