--- a/app/views/06/what.html
+++ b/app/views/06/what.html
@@ -26,7 +26,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="all-or-nothing-2" name="all-or-nothing" type="radio" value="Answer some questions to get personalised results">
           <label class="govuk-label govuk-radios__label" for="all-or-nothing-2">
-            Answer a few questions for more specific results
+            Answer up to four questions for more specific results
           </label>
         </div>
       </div>
