Added routing for search filters

--- a/app/views/06/check-answers-uni.html
+++ b/app/views/06/check-answers-uni.html
@@ -10,6 +10,10 @@
 <h1 class="govuk-heading-l">What you've told us</h1>
 <p>Check your answers, and change them if you'd like to, before viewing your search results.</p>
 
+<div class="govuk-inset-text">
+  You entered "Mahs" - did you mean "Maths"? <a href="">Update my search</a>
+</div>
+
 <dl class="govuk-summary-list">
   
   <div class="govuk-summary-list__row">
