--- a/app/views/06/search-results.html
+++ b/app/views/06/search-results.html
@@ -10,6 +10,11 @@
   <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-l">2 results</h1>
+
+    <div class="govuk-inset-text">
+      <h2 class="govuk-heading-m">Suggested search</h2>
+      Did you mean "Maths"? <br><br><a href="">Update my search</a>
+    </div>
   
   </div>
 
@@ -369,6 +374,7 @@
 
 
 <div class="govuk-grid-column-two-thirds">
+  
   <div id="active-filters">
     <h2 id="active-filters-heading" class="govuk-heading-m" style="display: none;">You've searched for:</h2>
     <div id="selected-filters" class="remove-filters"></div>
