Added routes for course details page

--- a/app/views/06/level-of-education.html
+++ b/app/views/06/level-of-education.html
@@ -29,7 +29,7 @@
           </div>
           <div class="govuk-radios__divider">or</div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="level-of-education-4" name="level-of-education" type="radio" value="I don't know">
+            <input class="govuk-radios__input" id="level-of-education-4" name="level-of-education" type="radio" value="Show me both">
             <label class="govuk-label govuk-radios__label" for="level-of-education-4">
               Show me both
             </label>
