--- a/app/views/06/check-answers.html
+++ b/app/views/06/check-answers.html
@@ -67,7 +67,7 @@
   </div>
   {% endif %}
 
-
+  {% if (data['learning-style']) %}
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Course preference
@@ -79,6 +79,7 @@
       <a class="govuk-link" href="learning-method">Change<span class="govuk-visually-hidden"> address</span></a>
     </dd>
   </div>
+  {% endif %}
   <!--<div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Apprenticeships and courses
@@ -90,6 +91,7 @@
       <a class="govuk-link" href="apprenticeships-or-courses">Change<span class="govuk-visually-hidden"> address</span></a>
     </dd>
   </div>-->
+  {% if (data['level-of-education']) %}
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Level you're looking for
@@ -101,8 +103,9 @@
       <a class="govuk-link" href="level-of-education">Change<span class="govuk-visually-hidden"> address</span></a>
     </dd>
   </div>
-</dl>
 
+{% endif %}
+</dl>
 <p>Find out <a href="ai">how we use AI</a> to bring you relevant results.</p>
 
 <button type="submit" class="govuk-button" data-module="govuk-button">
