--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -14,9 +14,23 @@
 
     <form method="get" action="load-courses">
 
+      <div class="filter-container">
+
+        <div class="filter-search-terms">
+  
+        <div class="filter-heading">
+
+        <h2 class="govuk-heading-m">Filter</h2>
+
+        </div>
+
+        </div>
+
+        <div class="filter-list">
 
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Qualification type</legend>
+
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Qualification type</legend>
     
         <div class="govuk-checkboxes govuk-checkboxes--small">
           {% for qual in ["A Level", "Apprenticeship", "BTEC", "Diploma", "Degree", "T Level"] %}
@@ -32,7 +46,9 @@
           {% endfor %}
         </div>
       </fieldset>
-    
+
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
       <div class="govuk-form-group">
         <label class="govuk-label" for="option-select-filter-location">
           Enter a postcode, town or city
@@ -43,7 +59,9 @@
                name="option-select-filter-location"
                value="{{ selectedLocation }}">
       </div>
-    
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
       <div class="govuk-form-group">
         <label class="govuk-label" for="subject-filter">
           Subject or career keywords
@@ -56,11 +74,17 @@
       </div>
     
       <button class="govuk-button" type="submit">Apply filters</button>
+
+      <p class="govuk-body">
+        <a href="/06/load-courses" class="govuk-link" id="clear-all-link">Clear all filters</a>
+      </p>
       
     </form>
     
-    
+  </div>
 </div>
+</div>
+
 
   <div class="govuk-grid-column-two-thirds">
 
@@ -128,9 +152,7 @@
       {% endif %}
     </div>
 
-    <p class="govuk-body">
-      <a href="/06/load-courses" class="govuk-link" id="clear-all-link">Clear all filters</a>
-    </p>
+  
   </div>
 {% endif %}
 
@@ -146,7 +168,9 @@
     </h2>
     <ul class="govuk-summary-card__actions">
       <li class="govuk-summary-card__action">
-        <a class="govuk-link" href="#">View this course<span class="govuk-visually-hidden"> of University of Gloucestershire (University of Gloucestershire)</span></a>
+        <a class="govuk-link" href="/06/course/{{ course.slug }}">
+          View more details<span class="govuk-visually-hidden"> about {{ course.name }}</span>
+        </a>
       </li>
     </ul>
   </div>
