--- a/app/views/06/what.html
+++ b/app/views/06/what.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="subjects" method="post" novalidate>
+<form action="18-all-or-subject" method="post" novalidate>
 
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="study-location-hint">
@@ -18,7 +18,7 @@
 
       <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="all-or-nothing" name="all-or-nothing" type="radio" value="Search for all courses near an institution">
+          <input class="govuk-radios__input" id="all-or-nothing" name="all-or-nothing" type="radio" value="Find all courses nearby">
           <label class="govuk-label govuk-radios__label" for="all-or-nothing">
             Find all courses nearby
           </label>
